Formatting and various features

--- a/src/napari_sam2annotator/Driver.ipynb
+++ b/src/napari_sam2annotator/Driver.ipynb
@@ -254,11 +254,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "4f75ffeb",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "fnames = glob.glob('U:/smc/public/SMC/sam2/plugin/data/*.tif')\n",
+    "file_index = 0\n",
+    "file_name = fnames[file_index]\n",
+    "out_name = file_name.replace('.tif', '_labels.tiff')\n",
+    "\n",
+    "while os.path.exists(out_name):\n",
+    "    file_index += 1\n",
+    "    if file_index >= len(fnames):\n",
+    "        break\n",
+    "    file_name = fnames[file_index]\n",
+    "    out_name = file_name.replace('.tif', '_labels.tiff')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7ad7577f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_next_undone(file_index):\n",
+    "    file_name = fnames[file_index]\n",
+    "    out_name = file_name.replace('.tif', '_labels.tiff')\n",
+    "\n",
+    "    while os.path.exists(out_name):\n",
+    "        file_index += 1\n",
+    "        if file_index >= len(fnames):\n",
+    "            break\n",
+    "        file_name = fnames[file_index]\n",
+    "        out_name = file_name.replace('.tif', '_labels.tiff')\n",
+    "    return file_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a751b23d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fnames = glob.glob('S:/micro/pat/rf2602/051925_reimaged40X_YH2AX_8OHdG_Splotch_Tcof1_818240/Fused/*.tif')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ddedd449",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = ski.io.imread(fnames[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7e08b18f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(41, 4283, 4279, 3)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39a1bdd2",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "98321a11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_index"
+   ]
   },
   {
    "cell_type": "code",
