--- a/src/napari_sam2annotator/Driver.ipynb
+++ b/src/napari_sam2annotator/Driver.ipynb
@@ -92,11 +92,11 @@
     {
      "data": {
       "text/plain": [
-       "[<Image layer 'Image' at 0x1cd83d538f0>,\n",
-       " <Image layer 'Image [1]' at 0x1cd83e10950>,\n",
-       " <Image layer 'Image [2]' at 0x1cd83e120c0>,\n",
-       " <Image layer 'Image [3]' at 0x1cd83f375f0>,\n",
-       " <Image layer 'Image [4]' at 0x1cd83f609e0>]"
+       "[<Image layer 'Image' at 0x22e13daeb10>,\n",
+       " <Image layer 'Image [1]' at 0x22e847c59a0>,\n",
+       " <Image layer 'Image [2]' at 0x22e848d4920>,\n",
+       " <Image layer 'Image [3]' at 0x22e848fa990>,\n",
+       " <Image layer 'Image [4]' at 0x22e13dcdb80>]"
       ]
      },
      "execution_count": 7,
@@ -118,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "frame loading (JPEG): 100%|██████████| 112/112 [00:03<00:00, 31.54it/s]\n",
+      "frame loading (JPEG): 100%|██████████| 112/112 [00:03<00:00, 31.81it/s]\n",
       "D:\\segment-anything-2\\sam2\\modeling\\backbones\\hieradet.py:68: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
       "  x = F.scaled_dot_product_attention(\n"
      ]
@@ -167,17 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "13176c31",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Shapes layer 'Box' at 0x1cd8a2f7c80>"
+       "<Shapes layer 'Box' at 0x22dfea59640>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,71 +185,6 @@
    "source": [
     "dummy_shape = np.array([[0,0,0], [0,0,1], [0, 1, 1], [0,1,0]])\n",
     "viewer.add_shapes([dummy_shape], ndim=3, name='Box')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "6fffc0f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "viewer.layers['Box'].data = dummy_shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "aa4091a5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(55, 255, 255)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "viewer.dims.current_step"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "f5aad3f4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([[0., 0., 0.],\n",
-       "        [0., 0., 1.],\n",
-       "        [0., 1., 1.],\n",
-       "        [0., 1., 0.]])]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "viewer.layers['Box'].data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "f71c4592",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "viewer.layers.selection.active"
    ]
   },
   {
@@ -364,34 +299,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "788df862",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"'Shapes' is not in list\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\smc\\AppData\\Local\\miniforge3\\envs\\sam2\\Lib\\site-packages\\napari\\utils\\events\\containers\\_typed.py:144\u001b[0m, in \u001b[0;36mTypedMutableSequence.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    143\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 144\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m    145\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "File \u001b[1;32mc:\\Users\\smc\\AppData\\Local\\miniforge3\\envs\\sam2\\Lib\\site-packages\\napari\\utils\\events\\containers\\_typed.py:236\u001b[0m, in \u001b[0;36mTypedMutableSequence.index\u001b[1;34m(self, value, start, stop)\u001b[0m\n\u001b[0;32m    234\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m i\n\u001b[1;32m--> 236\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    237\u001b[0m     trans\u001b[38;5;241m.\u001b[39m_(\n\u001b[0;32m    238\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{value!r}\u001b[39;00m\u001b[38;5;124m is not in list\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m    239\u001b[0m         deferred\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m    240\u001b[0m         value\u001b[38;5;241m=\u001b[39mvalue,\n\u001b[0;32m    241\u001b[0m     )\n\u001b[0;32m    242\u001b[0m )\n",
-      "\u001b[1;31mValueError\u001b[0m: 'Shapes' is not in list",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mviewer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlayers\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mShapes\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m     shapes \u001b[38;5;241m=\u001b[39m viewer\u001b[38;5;241m.\u001b[39mlayers[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mShapes\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mdata\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#mask = sam.infer_from_box_single_object(shapes)\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\smc\\AppData\\Local\\miniforge3\\envs\\sam2\\Lib\\site-packages\\napari\\components\\layerlist.py:170\u001b[0m, in \u001b[0;36mLayerList.__getitem__\u001b[1;34m(self, item)\u001b[0m\n\u001b[0;32m    169\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, item):\n\u001b[1;32m--> 170\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getitem__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mitem\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\smc\\AppData\\Local\\miniforge3\\envs\\sam2\\Lib\\site-packages\\napari\\utils\\events\\containers\\_typed.py:146\u001b[0m, in \u001b[0;36mTypedMutableSequence.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    144\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mindex(key))\n\u001b[0;32m    145\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m--> 146\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;28mstr\u001b[39m(e)) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n\u001b[0;32m    148\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_list[key]\n\u001b[0;32m    149\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__newlike__(result) \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(result, \u001b[38;5;28mlist\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m result\n",
-      "\u001b[1;31mKeyError\u001b[0m: \"'Shapes' is not in list\""
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "propagate in video: 100%|██████████| 48/48 [00:02<00:00, 16.22it/s]\n",
+      "propagate in video: 100%|██████████| 65/65 [00:04<00:00, 16.04it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Labels layer 'Labels' at 0x22dfea583e0>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "if viewer.layers['Shapes'] is not None:\n",
-    "    shapes = viewer.layers['Shapes'].data\n",
+    "if viewer.layers['Box'] is not None:\n",
+    "    shapes = viewer.layers['Box'].data\n",
     "#mask = sam.infer_from_box_single_object(shapes)\n",
-    "mask = sam.infer_from_box(shapes, do_reset=True)\n",
+    "mask = sam.infer_from_box(shapes[1:], do_reset=True)\n",
     "viewer.add_labels(mask.astype(int)*3)"
    ]
   },
